# qpm-paper

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  generate_notebooks.py  paper.txt  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_uci_default.ipynb  02_home_credit.ipynb  03_framingham.ipynb  03_framingham_executed.ipynb
qpm/: __init__.py  calibration.py  metrics.py  quantizer.py  scorecard.py
tests/: conftest.py  test_calibration.py  test_metrics.py  test_quantizer.py  test_scorecard.py
