[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpm"
version = "0.1.0"
description = "Quantized Prediction Models: Output-Space Regularization for Stable and Interpretable Regression"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Carlos R. Ortiz-Gómez" }
]
keywords = ["machine learning", "credit scoring", "quantization", "stability", "interpretability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "kaggle>=1.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qpm*"]
